1.8.0/_sources/arcgis.features.managers.rst.txt
arcgis.features.managers module
===============================

.. automodule:: arcgis.features.managers

AttachmentManager
--------------
.. autoclass:: arcgis.features.managers.AttachmentManager
    :members:
    :undoc-members:

SyncManager
--------------
.. autoclass:: arcgis.features.managers.SyncManager
    :members:
    :undoc-members:

FeatureLayerCollectionManager
--------------
.. autoclass:: arcgis.features.managers.FeatureLayerCollectionManager
    :inherited-members:
    :members:
    :undoc-members:

FeatureLayerManager
--------------
.. autoclass:: arcgis.features.managers.FeatureLayerManager
    :inherited-members:
    :members:
    :undoc-members:

VersionManager
--------------
.. autoclass:: arcgis.features._version.VersionManager
    :inherited-members:
    :members:
    :undoc-members:

Version
--------------
.. autoclass:: arcgis.features._version.Version
    :inherited-members:
    :members:
    :undoc-members:

ParcelFabricManager
--------------
.. autoclass:: arcgis.features._parcel.ParcelFabricManager
    :inherited-members:
    :members:
    :undoc-members:

UtilityNetworkManager
--------------
.. autoclass:: arcgis.features._utility.UtilityNetworkManager
    :inherited-members:
    :members:
    :undoc-members:
    
ValidationManager
--------------
.. autoclass:: arcgis.features._validation.ValidationManager
    :inherited-members:
    :members:
    :undoc-members: